test/files/errors/invalidEqStruct.jg
test struct {
    x int;
}

_main int () 
{
    uuuu struct_test;
    uuuu->x = "hello";
    0 return;
}